# ralphthon

./: .gitignore  README.md  docker-compose.yml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
backend/: Dockerfile  pyproject.toml  schema.sql
backend/backend/: __init__.py
backend/backend/app/: cache.py  config.py  db.py  main.py  models.py  repository.py
backend/tests/: test_api.py  test_models.py
cli/: pyproject.toml
cli/pgal/: __init__.py  client.py  main.py
cli/tests/: test_cli.py
docker/postgres-init/: 01-test-db.sql
docs/superpowers/plans/: 2026-05-30-project-profile-gallery-mvp.md
docs/superpowers/specs/: 2026-05-30-project-profile-gallery-design.md  2026-05-30-project-profile-gallery-storyboard.md
scripts/: skill_flow_check.py  storyboard_e2e.py
skills/profile-gallery/: SKILL.md
skills/profile-gallery/references/: cli-commands.md  image-prompting.md
