[project]
name = "profile-gallery-backend"
version = "0.1.0"
description = "Project Profile Gallery FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "python-multipart>=0.0.20",
  "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
