[project]
name = "profile-gallery-cli"
version = "0.1.0"
description = "Project Profile Gallery CLI"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
  "httpx>=0.28.0",
]

[project.scripts]
pgal = "pgal.main:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pgal"]

[tool.pytest.ini_options]
pythonpath = ["."]
